crucible-cli/test-data/simulate/calls.out.good
==== Begin Simulation ====
cx@0:i
intSum cx@0:i 42

==== Finish Simulation ====
==== Proof obligations ====

Prove:
  test-data/simulate/calls.cbl:7:5: error: in main
  bogus
  false
COUNTEREXAMPLE
